--- a/style.css
+++ b/style.css
@@ -133,14 +133,6 @@ p, li {
     font-weight: 700;
     line-height: 2.5rem;
 }
-.successful-card button {
-    padding: 14px;
-    border-radius: 8px;
-    background-color: hsl(234, 29%, 20%);
-    color: hsl(0, 0%, 100%);
-    border: none;
-    cursor: pointer;
-}
 
 .dissapear {
     display: none;
@@ -166,5 +158,15 @@ p, li {
     }
     .advertisement {
         gap: 16px;
+    }
+    .successful-card {
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        border-radius: 0;
+        justify-content: space-around;
+    }
+    .successful-card button {
+        margin-top: 80px;
     }
 }
