--- a/style.css
+++ b/style.css
@@ -93,26 +93,38 @@ p, li {
 }
 
 .confirm-email {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+    grid-template-rows: 1px repeat(2, 42px);
+    align-items: center;
     height: 160px;
     padding: 0 20px;
+    grid-row-gap: 18px;
 }
 .confirm-email label {
     color: hsl(234, 29%, 20%);
     font-weight: bold;
     font-size: 0.9rem;
-    margin-bottom: 6px;
 }
 .confirm-email input {
     padding: 14px;
     border: 1px solid hsl(231, 7%, 60%);
     border-radius: 8px;
+    grid-column: 1/3;
 }
 .confirm-email input:focus {
     border-color: hsl(234, 29%, 20%);
     outline: none;
+}
+.confirm-email button {
+    grid-column: 1/4;
+}
+
+.error {
+    color: hsl(4, 100%, 67%);
+    font-weight: 700;
+    font-size: 0.9rem;
+    justify-self: end;
 }
 
 .successful-card {
@@ -152,12 +164,14 @@ p, li {
     }
     .right {
         width: 100%;
+        height: 100%;
     }
     .right img {
         content: url(./assets/images/illustration-sign-up-mobile.svg);
     }
     .advertisement {
         gap: 16px;
+        height: 87%;
     }
     .successful-card {
         width: 100%;
